# kmriiwa_ros2_bridge_stack

./: .~lock.emptyy.odt#  README.md  emptyy.odt
kmriiwa_arm_control/: CMakeLists.txt  kmriiwa_arm_controller.py  kmriiwa_arm_kdl_control_pick_and_place.py  kmriiwa_arm_kdl_control_test_case.py  kmriiwa_arm_kdl_control_test_case_with_aruco.py  package.xml
kmriiwa_arm_control/scripts/: kmriiwa_arm_controller.py  kmriiwa_arm_kdl_control.py  kmriiwa_arm_kdl_control_pick_and_place.py  kmriiwa_arm_kdl_control_pick_and_placev2.py  kmriiwa_arm_kdl_control_test_case.py  kmriiwa_arm_kdl_control_test_case_with_aruco.py  kmriiwa_arm_kdl_control_v2.py
kmriiwa_bringup/: CMakeLists.txt  package.xml
kmriiwa_bringup/launch/: kmriiwa_bringup.launch.py  planning_stack_bringup.launch.py  planning_stack_gazebo_bringup.launch.py
kmriiwa_description/: CMakeLists.txt  package.xml
kmriiwa_description/launch/: kmriiwa_upload.launch.py
kmriiwa_description/meshes/Coresense_CAD/: bin.stl
kmriiwa_description/meshes/Coresense_CAD/nut/27-Sep-2024_(09_14_58.299630)/depth_csv/: 000003_depth.csv  000010_depth.csv  000022_depth.csv  000026_depth.csv  000033_depth.csv  000035_depth.csv  000036_depth.csv  000040_depth.csv
kmriiwa_description/meshes/Coresense_CAD/nut/results/27-Sep-2024_(09_21_58.485115)/: detection.json
kmriiwa_description/meshes/Coresense_CAD/nut/results/27-Sep-2024_(09_34_05.199921)/: detection.json  detection.npz
kmriiwa_description/meshes/coresense_extras/: binR.stl
kmriiwa_description/meshes/coresense_extras/base_plate/: CS Base Plate Rev A v7.stl
kmriiwa_description/meshes/coresense_extras/gear_large/: CS Gear 40 Rev A v3.stl
kmriiwa_description/meshes/coresense_extras/gear_small/: CS Gear 30 Rev A v5.stl
kmriiwa_description/meshes/coresense_extras/iiwa_gripper/: CS Schunk EGP-C40 Assembly v2.stl
kmriiwa_description/meshes/coresense_extras/nut/: CS Nut Rev A v2.stl
kmriiwa_description/meshes/coresense_extras/nut/27-Sep-2024_(09_14_58.299630)/depth_csv/: 000000_depth.csv  000001_depth.csv  000002_depth.csv  000004_depth.csv  000005_depth.csv  000006_depth.csv  000007_depth.csv  000011_depth.csv  000012_depth.csv  000013_depth.csv  000014_depth.csv  000015_depth.csv  000016_depth.csv  000017_depth.csv  000018_depth.csv  000019_depth.csv  000021_depth.csv  000023_depth.csv  000024_depth.csv  000025_depth.csv  000027_depth.csv  000028_depth.csv  000029_depth.csv  000031_depth.csv  000032_depth.csv  000037_depth.csv  000038_depth.csv  000039_depth.csv  000041_depth.csv
kmriiwa_description/meshes/coresense_extras/nut/results/08-Oct-2024_(13_41_48.936533)/: detection.json  detection.npz
kmriiwa_description/meshes/coresense_extras/nut/results/14-Oct-2024_(10_52_49.168646)/: detection.json  detection.npz
kmriiwa_description/meshes/coresense_extras/nut/results/27-Sep-2024_(09_20_44.051958)/: detection.json  detection.npz
kmriiwa_description/meshes/coresense_extras/nut/results/27-Sep-2024_(09_23_24.648937)/: detection.json  detection.npz
kmriiwa_description/meshes/coresense_extras/nut/results/27-Sep-2024_(09_30_40.683457)/: detection.json
kmriiwa_description/meshes/coresense_extras/nut/results/27-Sep-2024_(09_32_14.158546)/: detection.json  detection.npz
kmriiwa_description/meshes/coresense_extras/realsense_camera/: CS Camera Bracket Assembly Rev B v4_remesh.stl
kmriiwa_description/meshes/coresense_extras/shaft/: CS Shaft Rev A v6.stl
kmriiwa_description/urdf/iiwa14/: iiwa.gazebo.xacro  iiwa14.xacro
kmriiwa_description/urdf/kmp200/: kmp200.gazebo.xacro  kmp200.xacro
kmriiwa_description/urdf/robot/: kmriiwa.urdf.xacro  kmriiwagazebo.sdf  kmriiwakdl.urdf
kmriiwa_description/urdf/robot/working_kdl_urdf/: kmriiwakdl.urdf
kmriiwa_description/urdf/robot_extras/: robot_extras.xacro
kmriiwa_moveit/: CMakeLists.txt  package.xml
kmriiwa_moveit/launch/: chomp_planning_pipeline.launch.py  default_warehouse_db.launch.py  kmriiwa_moveit_controller_manager.launch.py  move_group.launch.py  ompl_planning_pipeline.launch.py  planning_context.launch.py  ros_controllers.launch.py  run_benchmark_ompl.launch.py  trajectory_execution.launch.py
kmriiwa_msgs/: CMakeLists.txt  package.xml
kmriiwa_msgs/msg/: JointPosition.msg  KMRStatus.msg  LBRStatus.msg
kmriiwa_navigation/: CMakeLists.txt  package.xml
kmriiwa_navigation/config/: common_costmap.yaml  global_costmap_laser.yaml  gmapping.yaml  local_costmap.yaml  local_planner.yaml  nav2_params.yaml
kmriiwa_navigation/launch/: amcl.launch.py  gmapping.launch.py  kmr_robot_gazebo_navigation.launch.py  kmr_robot_navigation.launch.py  kmr_robot_navigation_with_cs.launch.py  laserscan_merge.launch.py  map_navigation.launch.py  mapless_navigation.launch.py  mapless_navigation_legacy.launch.py  move_base.launch.py  move_robot_waypoint.launch.py
kmriiwa_navigation/maps/: bay3_map.pgm  bay3_map.yaml  bay3_map_original.yaml  bay_map.yaml  map.yaml
kmriiwa_navigation/maps/donottouch/: bay3_map.yaml  imr_coresense_map.pgm  imr_coresense_map.yaml
kmriiwa_navigation/maps/good_est/: bay3_map.pgm
kmriiwa_navigation/scripts/: bay3_map.pgm  clock_subscriber.py  convert_map.py  coresense_navigation_goals.py  coresense_navigation_with_arm_control.py  empty_map_generator.py  move_base_coresense_v02.py  move_base_ros2_v01.py  move_through_waypoints.py  send_arm_traj.py  send_goal.py  send_multiple_goals.py  send_multiple_goals_gazebo.py  send_multiple_goals_gazebo_real_map.py  send_multiple_goals_gazebo_with_cs.py
kmriiwa_simulation/: CMakeLists.txt  package.xml
kmriiwa_simulation/launch/: gazebo.launch.py  gazebo_coresense.launch.py  (+1 more)
kmriiwa_vis/: CMakeLists.txt  package.xml
kmriiwa_vis/launch/: moveit_view.launch.py  navigation_moveit_view.launch.py  navigation_view.launch.py  view_model.launch.py  view_robot.launch.py  view_robot_move.launch.py  view_robot_teleop.launch.py  view_robot_waypoint.launch.py
kmriiwa_vis/maps/: map.pgm
kmriiwa_vis/rviz/: map_navigation.rviz  map_navigation_moveit.rviz  mapless_navigation.rviz  mapless_navigation_moveit.rviz  model.rviz  moveit.rviz  robot.rviz  robot_nav.rviz
(+16 files in other folders)
