<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kmriiwa_description</name>
  <version>0.0.0</version>
  <description>The kmriiwa_description package</description>
  
  <author email="keerthi.sagar@imr.ie">keerthis</author>
  <author email="hatem.fakhruldeen@gmail.com">stoic-roboticist</author>
  <maintainer email="keerthi.sagar@imr.ie">keerthis</maintainer>
  
  <license>TODO</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
